--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -6,6 +6,11 @@
 	<title>Development Environment</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
+    <style>
+        body {
+            margin:0px;
+        }
+    </style>
 </head>
 
 <body>
