--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -9,6 +9,8 @@
     <style>
         body {
             margin:0px;
+            /*background-image: urla("https://unsplash.it/960/540");
+            background-size: cover;*/
         }
     </style>
 </head>
