--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -27,6 +27,7 @@
     </div>
     <script src="js/pixi.min.js"></script>
     <script src="../../libs/howler/howler.js"></script>
+    <script src="../../libs/box2d/Box2D.js"></script>
     <script src="../../build/compile.js"></script>
     <script src="js/game.js"></script>
 </body>
